# KMediaBridge

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  index.html  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-maven-central.yml  release.yml
LICENSES/: LGPL-2.1-or-later.txt
api/: build.gradle.kts
compliance/ffmpeg/: manifest.json
docs/: ARCHITECTURE.md  COMPLIANCE.md  RELEASING.md  RELINKING.md
ffmpeg/: build.gradle.kts  consumer-rules.pro
ffmpeg-runtime-android/: build.gradle.kts
ffmpeg-runtime-desktop/: build.gradle.kts
ffmpeg/src/jvmTest/resources/: kmediabridge-subtitle-test.mkv.b64  kmediabridge-test.mkv.b64
gradle/: libs.versions.toml
maven/io/github/shusek/kmedia-bridge-api/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/shusek/kmedia-bridge-api-android/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/shusek/kmedia-bridge-api-iosarm64/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/shusek/kmedia-bridge-api-iossimulatorarm64/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/shusek/kmedia-bridge-api-jvm/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/shusek/kmedia-bridge-api-linuxarm64/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/shusek/kmedia-bridge-api-linuxx64/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/shusek/kmedia-bridge-api-macosarm64/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/shusek/kmedia-bridge-api-macosx64/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/shusek/kmedia-bridge-api-mingwx64/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/shusek/kmedia-bridge-api-wasm-js/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/shusek/kmedia-bridge-ffmpeg/: maven-metadata.xml  (+4 more)
maven/io/github/shusek/kmedia-bridge-ffmpeg-android/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/shusek/kmedia-bridge-ffmpeg-iosarm64/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/io/github/shusek/kmedia-bridge-ffmpeg-iossimulatorarm64/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
native/: CMakeLists.txt  README.md  build-client.py  build-ffmpeg-android.sh  build-ffmpeg-unix.sh  build-ffmpeg-windows-x64.sh  build-subtitle-deps-unix.sh
native/android/: kmedia_bridge_android_jni.c
native/include/: kmedia_bridge.h
native/src/: kmedia_bridge.c  kmedia_bridge_hdr_math.c  kmedia_bridge_hdr_math.h  kmedia_bridge_subtitles.c  kmedia_bridge_timestamps.h  kmedia_bridge_tonemap.c
native/tests/: kmedia_bridge_hdr_math_test.c  kmedia_bridge_timestamps_test.c
scripts/: assemble_android_clients.py  assemble_runtime_manifest.py  assemble_source_archive.py  build_central_bundle.py  generate_client_sbom.py  generate_native_checksums.py  generate_sbom.py  inspect_native_runtime.py  package_client_resources.py  package_native_runtime.py  smoke_native.py  test_central_bundle.py  test_client_architecture.py  test_inspect_native_runtime.py  test_license_split.py  test_verify_publications.py  verify_client_output.py  verify_client_resources.py  verify_compliance.py  verify_ffmpeg_release.sh  verify_publications.py  verify_transitive_runtime_poms.py
site/: index.html
(+1099 files in other folders)
